fix: fix nav sidebar collapse

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -12,10 +12,7 @@
 
 .ant-layout-sider-children{
   width: 100%;
-  height: 100%; 
-  /* display: grid; */
-  /* grid-template-rows: 141px 1fr 1fr; */
-  /* align-items: baseline; */
+  height: 100%;
 }
 
 .ant-layout-sider-children .exit-block{
@@ -35,8 +32,10 @@
 li.ant-menu-item{
   display: flex;
   align-items: baseline;
-  padding: 12px 0px 0px 24px;
+  padding-top: 12px;
+  padding-left: 8px;
   margin-bottom: 16px;
+  gap: 10px;
 
   border-right: 3px solid rgba(6, 17, 120, 0);
 
@@ -58,8 +57,6 @@ li.ant-menu-item:hover{
 }
 
 .ant-menu-title-content{
-  margin-left: 10px;
-
   font-size: 14px;
   font-weight: 400;
   line-height: 130%;
@@ -70,7 +67,10 @@ li.ant-menu-item:hover{
   flex: auto;
   min-width: 0;
   overflow: hidden;
-  text-overflow: ellipsis;
+}
+
+.opacity-block{
+  transition: all 0.5s ease;
 }
 
 .exit-block{
@@ -89,7 +89,6 @@ li.ant-menu-item:hover{
 .ant-btn.ant-btn-link{
   position: relative;
   margin-left: 10px;
-  /* padding: 4px 15px; */
 
   font-size: 14px;
   font-weight: 400;
